--- a/_posts/2016-11-24-test.md
+++ b/_posts/2016-11-24-test.md
@@ -1,7 +1,6 @@
 ---
 layout: post-list
 title: Test Post
-excerpt: "This is a test blog"
+excerpt: "This is a test blog inside _post"
 comments: false
 ---
-this is my test blog.. 
