--- a/_posts/2016-11-24-test.md
+++ b/_posts/2016-11-24-test.md
@@ -1,9 +1,26 @@
 ---
 layout: post
-title: Test Post
-excerpt: "This is a test blog inside _post"
+title: Install PostgresSQL
+excerpt: "Intall PostgreSQL on Ubuntu"
 comments: false
 ---
 
+**Install PostgresSQL on Ubuntu**
 
-"this is a test "
+Ubuntu's default repositories contain Postgres packages, so we can install them without a hassle using the apt packaging system.
+
+Run following commands on the command line:
+
+    sudo apt-get update
+    sudo apt-get install postgresql postgresql-contrib
+Once the installation is complete you need to start the postgresql on your machine by typing the following command:
+
+    sudo service postgresql start
+   The installation procedure created a user account called postgres that is associated with the default Postgres role. In order to use Postgres, we'll need to log into that account. You can do that by typing:
+   
+
+    psql -U postgres -h localhost
+Once you are in postgresql you can set the password to your postgres database by typing the following command: 
+
+    \password postgres
+I hope you find this information useful, go have fun with postgresql database
